[package]
name = "d20"
version = "0.1.0"
authors = ["Dan Nemeth <dan.nemeth@gmail.com>", "Kevin Hoffman <alothien@gmail.com>"]
description = "A library for rolling dice based on simple expressions"
license = "MPL-2.0"
homepage = "https://github.com/pholactery/d20"
documentation = "https://docs.rs/d20"
repository = "https://github.com/pholactery/d20"
readme = "README.md"
keywords = ["dice", "roll", "game", "random", "dnd"]


[dependencies]
rand = "0.3"
regex = "0.2"